fix:clean the each every class . keeping neccessary logs and removed unused methods and commetned tings